// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display a loading indicator by default 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <section>
    <h1>
        Your Order
    </h1>
    <div>
        <p>
            Your order with #
             contains the following items:
        </p>
        <ul
            className="Receipt-list"
        >
            
        </ul>
        <ul
            className="Receipt-list"
        >
            <li
                className="Receipt-list-item"
            >
                <span
                    className="Receipt-list-title"
                >
                    Sub Total: 
                </span>
                <span
                    className="Receipt-list-price"
                >
                    $ 
                </span>
            </li>
            <li
                className="Receipt-list-item"
            >
                <span
                    className="Receipt-list-title"
                >
                    Tax Amount: 
                </span>
                <span
                    className="Receipt-list-price"
                >
                    $ 
                </span>
            </li>
            <li
                className="Receipt-list-item"
            >
                <span
                    className="Receipt-list-title"
                >
                    Total: 
                </span>
                <span
                    className="Receipt-list-price"
                >
                    $ 
                </span>
            </li>
        </ul>
        <div
            className="Receipt-footer"
        >
            ^_^
        </div>
    </div>
</section>,
  "nodes": Array [
    <section>
      <h1>
            Your Order
      </h1>
      <div>
            <p>
                  Your order with #
                   contains the following items:
            </p>
            <ul
                  className="Receipt-list"
            >
                  
            </ul>
            <ul
                  className="Receipt-list"
            >
                  <li
                        className="Receipt-list-item"
                  >
                        <span
                              className="Receipt-list-title"
                        >
                              Sub Total: 
                        </span>
                        <span
                              className="Receipt-list-price"
                        >
                              $ 
                        </span>
                  </li>
                  <li
                        className="Receipt-list-item"
                  >
                        <span
                              className="Receipt-list-title"
                        >
                              Tax Amount: 
                        </span>
                        <span
                              className="Receipt-list-price"
                        >
                              $ 
                        </span>
                  </li>
                  <li
                        className="Receipt-list-item"
                  >
                        <span
                              className="Receipt-list-title"
                        >
                              Total: 
                        </span>
                        <span
                              className="Receipt-list-price"
                        >
                              $ 
                        </span>
                  </li>
            </ul>
            <div
                  className="Receipt-footer"
            >
                  ^_^
            </div>
      </div>
</section>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 2,
      "_context": Object {},
      "_currentElement": <Receipt />,
      "_debugID": 1,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": StatelessComponent {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {},
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 1,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <section>
          <h1>
                    Your Order
          </h1>
          <div>
                    <p>
                              Your order with #
                               contains the following items:
                    </p>
                    <ul
                              className="Receipt-list"
                    >
                              
                    </ul>
                    <ul
                              className="Receipt-list"
                    >
                              <li
                                        className="Receipt-list-item"
                              >
                                        <span
                                                  className="Receipt-list-title"
                                        >
                                                  Sub Total: 
                                        </span>
                                        <span
                                                  className="Receipt-list-price"
                                        >
                                                  $ 
                                        </span>
                              </li>
                              <li
                                        className="Receipt-list-item"
                              >
                                        <span
                                                  className="Receipt-list-title"
                                        >
                                                  Tax Amount: 
                                        </span>
                                        <span
                                                  className="Receipt-list-price"
                                        >
                                                  $ 
                                        </span>
                              </li>
                              <li
                                        className="Receipt-list-item"
                              >
                                        <span
                                                  className="Receipt-list-title"
                                        >
                                                  Total: 
                                        </span>
                                        <span
                                                  className="Receipt-list-price"
                                        >
                                                  $ 
                                        </span>
                              </li>
                    </ul>
                    <div
                              className="Receipt-footer"
                    >
                              ^_^
                    </div>
          </div>
</section>,
        "_debugID": 2,
        "_renderedOutput": <section>
          <h1>
                    Your Order
          </h1>
          <div>
                    <p>
                              Your order with #
                               contains the following items:
                    </p>
                    <ul
                              className="Receipt-list"
                    >
                              
                    </ul>
                    <ul
                              className="Receipt-list"
                    >
                              <li
                                        className="Receipt-list-item"
                              >
                                        <span
                                                  className="Receipt-list-title"
                                        >
                                                  Sub Total: 
                                        </span>
                                        <span
                                                  className="Receipt-list-price"
                                        >
                                                  $ 
                                        </span>
                              </li>
                              <li
                                        className="Receipt-list-item"
                              >
                                        <span
                                                  className="Receipt-list-title"
                                        >
                                                  Tax Amount: 
                                        </span>
                                        <span
                                                  className="Receipt-list-price"
                                        >
                                                  $ 
                                        </span>
                              </li>
                              <li
                                        className="Receipt-list-item"
                              >
                                        <span
                                                  className="Receipt-list-title"
                                        >
                                                  Total: 
                                        </span>
                                        <span
                                                  className="Receipt-list-price"
                                        >
                                                  $ 
                                        </span>
                              </li>
                    </ul>
                    <div
                              className="Receipt-footer"
                    >
                              ^_^
                    </div>
          </div>
</section>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Receipt />,
}
`;

exports[`should display a receipt 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <section>
    <h1>
        Your Order
    </h1>
    <div>
        <p>
            Your order with #
            #123
             contains the following items:
        </p>
        <ul
            className="Receipt-list"
        >
            <li
                className="Receipt-list-item"
            >
                <div
                    className="Receipt-list-title"
                >
                    2
                    x 
                    Apple
                </div>
                <div
                    className="Receipt-list-price"
                >
                    $
                    0.5
                </div>
            </li>
            <li
                className="Receipt-list-item"
            >
                <div
                    className="Receipt-list-title"
                >
                    3
                    x 
                    Orange
                </div>
                <div
                    className="Receipt-list-price"
                >
                    $
                    0.9
                </div>
            </li>
            <li
                className="Receipt-list-item"
            >
                <div
                    className="Receipt-list-title"
                >
                    4
                    x 
                    Bananna
                </div>
                <div
                    className="Receipt-list-price"
                >
                    $
                    0.6
                </div>
            </li>
            <li
                className="Receipt-list-item"
            >
                <div
                    className="Receipt-list-title"
                >
                    7
                    x 
                    Papaya
                </div>
                <div
                    className="Receipt-list-price"
                >
                    $
                    2.5
                </div>
            </li>
        </ul>
        <ul
            className="Receipt-list"
        >
            <li
                className="Receipt-list-item"
            >
                <span
                    className="Receipt-list-title"
                >
                    Sub Total: 
                </span>
                <span
                    className="Receipt-list-price"
                >
                    $ 
                    4.5
                </span>
            </li>
            <li
                className="Receipt-list-item"
            >
                <span
                    className="Receipt-list-title"
                >
                    Tax Amount: 
                </span>
                <span
                    className="Receipt-list-price"
                >
                    $ 
                    0.37
                </span>
            </li>
            <li
                className="Receipt-list-item"
            >
                <span
                    className="Receipt-list-title"
                >
                    Total: 
                </span>
                <span
                    className="Receipt-list-price"
                >
                    $ 
                    4.87
                </span>
            </li>
        </ul>
        <div
            className="Receipt-footer"
        >
            ^_^
        </div>
    </div>
</section>,
  "nodes": Array [
    <section>
      <h1>
            Your Order
      </h1>
      <div>
            <p>
                  Your order with #
                  #123
                   contains the following items:
            </p>
            <ul
                  className="Receipt-list"
            >
                  <li
                        className="Receipt-list-item"
                  >
                        <div
                              className="Receipt-list-title"
                        >
                              2
                              x 
                              Apple
                        </div>
                        <div
                              className="Receipt-list-price"
                        >
                              $
                              0.5
                        </div>
                  </li>
                  <li
                        className="Receipt-list-item"
                  >
                        <div
                              className="Receipt-list-title"
                        >
                              3
                              x 
                              Orange
                        </div>
                        <div
                              className="Receipt-list-price"
                        >
                              $
                              0.9
                        </div>
                  </li>
                  <li
                        className="Receipt-list-item"
                  >
                        <div
                              className="Receipt-list-title"
                        >
                              4
                              x 
                              Bananna
                        </div>
                        <div
                              className="Receipt-list-price"
                        >
                              $
                              0.6
                        </div>
                  </li>
                  <li
                        className="Receipt-list-item"
                  >
                        <div
                              className="Receipt-list-title"
                        >
                              7
                              x 
                              Papaya
                        </div>
                        <div
                              className="Receipt-list-price"
                        >
                              $
                              2.5
                        </div>
                  </li>
            </ul>
            <ul
                  className="Receipt-list"
            >
                  <li
                        className="Receipt-list-item"
                  >
                        <span
                              className="Receipt-list-title"
                        >
                              Sub Total: 
                        </span>
                        <span
                              className="Receipt-list-price"
                        >
                              $ 
                              4.5
                        </span>
                  </li>
                  <li
                        className="Receipt-list-item"
                  >
                        <span
                              className="Receipt-list-title"
                        >
                              Tax Amount: 
                        </span>
                        <span
                              className="Receipt-list-price"
                        >
                              $ 
                              0.37
                        </span>
                  </li>
                  <li
                        className="Receipt-list-item"
                  >
                        <span
                              className="Receipt-list-title"
                        >
                              Total: 
                        </span>
                        <span
                              className="Receipt-list-price"
                        >
                              $ 
                              4.87
                        </span>
                  </li>
            </ul>
            <div
                  className="Receipt-footer"
            >
                  ^_^
            </div>
      </div>
</section>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 2,
      "_context": Object {},
      "_currentElement": <Receipt
        isLoading={false}
        items={
                Array [
                        Object {
                          "id": "apple",
                          "name": "Apple",
                          "price": 0.5,
                          "quantity": 2,
                        },
                        Object {
                          "id": "orange",
                          "name": "Orange",
                          "price": 0.9,
                          "quantity": 3,
                        },
                        Object {
                          "id": "bananna",
                          "name": "Bananna",
                          "price": 0.6,
                          "quantity": 4,
                        },
                        Object {
                          "discount": Object {
                            "amount": 1,
                            "minItems": 3,
                          },
                          "id": "papaya",
                          "name": "Papaya",
                          "price": 2.5,
                          "quantity": 7,
                        },
                      ]
        }
        orderId="#123"
        subTotalAmount={4.5}
        taxAmount={0.37}
        totalAmount={4.87}
/>,
      "_debugID": 3,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": StatelessComponent {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "isLoading": false,
          "items": Array [
            Object {
              "id": "apple",
              "name": "Apple",
              "price": 0.5,
              "quantity": 2,
            },
            Object {
              "id": "orange",
              "name": "Orange",
              "price": 0.9,
              "quantity": 3,
            },
            Object {
              "id": "bananna",
              "name": "Bananna",
              "price": 0.6,
              "quantity": 4,
            },
            Object {
              "discount": Object {
                "amount": 1,
                "minItems": 3,
              },
              "id": "papaya",
              "name": "Papaya",
              "price": 2.5,
              "quantity": 7,
            },
          ],
          "orderId": "#123",
          "subTotalAmount": 4.5,
          "taxAmount": 0.37,
          "totalAmount": 4.87,
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 2,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <section>
          <h1>
                    Your Order
          </h1>
          <div>
                    <p>
                              Your order with #
                              #123
                               contains the following items:
                    </p>
                    <ul
                              className="Receipt-list"
                    >
                              <li
                                        className="Receipt-list-item"
                              >
                                        <div
                                                  className="Receipt-list-title"
                                        >
                                                  2
                                                  x 
                                                  Apple
                                        </div>
                                        <div
                                                  className="Receipt-list-price"
                                        >
                                                  $
                                                  0.5
                                        </div>
                              </li>
                              <li
                                        className="Receipt-list-item"
                              >
                                        <div
                                                  className="Receipt-list-title"
                                        >
                                                  3
                                                  x 
                                                  Orange
                                        </div>
                                        <div
                                                  className="Receipt-list-price"
                                        >
                                                  $
                                                  0.9
                                        </div>
                              </li>
                              <li
                                        className="Receipt-list-item"
                              >
                                        <div
                                                  className="Receipt-list-title"
                                        >
                                                  4
                                                  x 
                                                  Bananna
                                        </div>
                                        <div
                                                  className="Receipt-list-price"
                                        >
                                                  $
                                                  0.6
                                        </div>
                              </li>
                              <li
                                        className="Receipt-list-item"
                              >
                                        <div
                                                  className="Receipt-list-title"
                                        >
                                                  7
                                                  x 
                                                  Papaya
                                        </div>
                                        <div
                                                  className="Receipt-list-price"
                                        >
                                                  $
                                                  2.5
                                        </div>
                              </li>
                    </ul>
                    <ul
                              className="Receipt-list"
                    >
                              <li
                                        className="Receipt-list-item"
                              >
                                        <span
                                                  className="Receipt-list-title"
                                        >
                                                  Sub Total: 
                                        </span>
                                        <span
                                                  className="Receipt-list-price"
                                        >
                                                  $ 
                                                  4.5
                                        </span>
                              </li>
                              <li
                                        className="Receipt-list-item"
                              >
                                        <span
                                                  className="Receipt-list-title"
                                        >
                                                  Tax Amount: 
                                        </span>
                                        <span
                                                  className="Receipt-list-price"
                                        >
                                                  $ 
                                                  0.37
                                        </span>
                              </li>
                              <li
                                        className="Receipt-list-item"
                              >
                                        <span
                                                  className="Receipt-list-title"
                                        >
                                                  Total: 
                                        </span>
                                        <span
                                                  className="Receipt-list-price"
                                        >
                                                  $ 
                                                  4.87
                                        </span>
                              </li>
                    </ul>
                    <div
                              className="Receipt-footer"
                    >
                              ^_^
                    </div>
          </div>
</section>,
        "_debugID": 4,
        "_renderedOutput": <section>
          <h1>
                    Your Order
          </h1>
          <div>
                    <p>
                              Your order with #
                              #123
                               contains the following items:
                    </p>
                    <ul
                              className="Receipt-list"
                    >
                              <li
                                        className="Receipt-list-item"
                              >
                                        <div
                                                  className="Receipt-list-title"
                                        >
                                                  2
                                                  x 
                                                  Apple
                                        </div>
                                        <div
                                                  className="Receipt-list-price"
                                        >
                                                  $
                                                  0.5
                                        </div>
                              </li>
                              <li
                                        className="Receipt-list-item"
                              >
                                        <div
                                                  className="Receipt-list-title"
                                        >
                                                  3
                                                  x 
                                                  Orange
                                        </div>
                                        <div
                                                  className="Receipt-list-price"
                                        >
                                                  $
                                                  0.9
                                        </div>
                              </li>
                              <li
                                        className="Receipt-list-item"
                              >
                                        <div
                                                  className="Receipt-list-title"
                                        >
                                                  4
                                                  x 
                                                  Bananna
                                        </div>
                                        <div
                                                  className="Receipt-list-price"
                                        >
                                                  $
                                                  0.6
                                        </div>
                              </li>
                              <li
                                        className="Receipt-list-item"
                              >
                                        <div
                                                  className="Receipt-list-title"
                                        >
                                                  7
                                                  x 
                                                  Papaya
                                        </div>
                                        <div
                                                  className="Receipt-list-price"
                                        >
                                                  $
                                                  2.5
                                        </div>
                              </li>
                    </ul>
                    <ul
                              className="Receipt-list"
                    >
                              <li
                                        className="Receipt-list-item"
                              >
                                        <span
                                                  className="Receipt-list-title"
                                        >
                                                  Sub Total: 
                                        </span>
                                        <span
                                                  className="Receipt-list-price"
                                        >
                                                  $ 
                                                  4.5
                                        </span>
                              </li>
                              <li
                                        className="Receipt-list-item"
                              >
                                        <span
                                                  className="Receipt-list-title"
                                        >
                                                  Tax Amount: 
                                        </span>
                                        <span
                                                  className="Receipt-list-price"
                                        >
                                                  $ 
                                                  0.37
                                        </span>
                              </li>
                              <li
                                        className="Receipt-list-item"
                              >
                                        <span
                                                  className="Receipt-list-title"
                                        >
                                                  Total: 
                                        </span>
                                        <span
                                                  className="Receipt-list-price"
                                        >
                                                  $ 
                                                  4.87
                                        </span>
                              </li>
                    </ul>
                    <div
                              className="Receipt-footer"
                    >
                              ^_^
                    </div>
          </div>
</section>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Receipt
    isLoading={false}
    items={
        Array [
            Object {
              "id": "apple",
              "name": "Apple",
              "price": 0.5,
              "quantity": 2,
            },
            Object {
              "id": "orange",
              "name": "Orange",
              "price": 0.9,
              "quantity": 3,
            },
            Object {
              "id": "bananna",
              "name": "Bananna",
              "price": 0.6,
              "quantity": 4,
            },
            Object {
              "discount": Object {
                "amount": 1,
                "minItems": 3,
              },
              "id": "papaya",
              "name": "Papaya",
              "price": 2.5,
              "quantity": 7,
            },
          ]
    }
    orderId="#123"
    subTotalAmount={4.5}
    taxAmount={0.37}
    totalAmount={4.87}
/>,
}
`;
